# DbTernaryClock

./: .travis.yml  CMakeLists.txt  DbTernaryClock.pro  README.md  main.cpp
